# zcash-hw-wallet-sdk

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: integration.yml
docs/: pczt-hw-signing-api.md  plan-sapling-transparent.md
integration-tests/: Dockerfile.ci
integration-tests/virtual-device/: CMakeLists.txt  tcp_transport.c  tcp_transport.h  virtual_device.c  wallet_test.c  wallet_test.h
src/: error.rs  ledger_client.rs  lib.rs  signer.rs  tests.rs  traits.rs  types.rs  verify.rs  workflow.rs
src/protocol/: hanh.rs  hwp.rs  mod.rs
src/transport/: ledger.rs  mod.rs  qr.rs  serial.rs  speculos.rs  tcp.rs
tests/: integration.rs
