[package]
name = "zcash-hw-wallet-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Transport-agnostic SDK for signing Zcash Orchard shielded transactions via hardware wallets using the PCZT standard"
repository = "https://github.com/wh00hw/zcash-hw-wallet-sdk"
keywords = ["zcash", "hardware-wallet", "pczt", "orchard", "signing"]
categories = ["cryptography", "hardware-support"]

[features]
default = ["serial"]
serial = ["dep:serialport"]
ledger = ["dep:hidapi"]
tcp = []
qr = ["dep:qrcode", "dep:image", "dep:rqrr", "dep:ur"]

[dependencies]
# Error handling
anyhow = "1"
thiserror = "2"

# Serialization & encoding
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"

# Security hardening
zeroize = { version = "1", features = ["derive"] }
subtle = "2"
blake2b_simd = "1"

# Hash primitives — pulled transitively by orchard but we use them directly
# in verify.rs::hash160 for transparent pubkey-to-script binding (audit H2).
# Pinned to a major version that matches what librustzcash uses, to avoid
# duplicate copies in the build.
sha2 = "0.10"
ripemd = "0.1"

# Fresh-nonce generator for attestation challenges (audit M1). OsRng pulls
# from /dev/urandom on Unix, BCryptGenRandom on Windows — i.e. the platform
# CSPRNG. Same major version as the rest of the rand_core consumers in the
# orchard / pczt dependency tree.
rand_core = { version = "0.6", features = ["getrandom"] }

# Zcash crates — aligned with librustzcash main (NU6.3 / Ironwood pre-release stack)
pczt = { version = "0.7", features = ["io-finalizer", "prover", "signer", "spend-finalizer", "tx-extractor"] }
orchard = "0.15.0-pre.2"
reddsa = "0.5"
ff = "0.13"
# Used in workflow.rs to trial-decrypt out_ciphertext / enc_ciphertext with
# the device's OVK so we can forward the memo plaintext to the device for
# on-chip enc_ciphertext recomputation (v5 memo-verifying protocol).
zcash_note_encryption = "0.4"
secp256k1 = "0.29"
zcash_address = "0.13.0-pre.0"
zcash_primitives = "0.29.0-pre.0"
zcash_protocol = "0.10.0-pre.0"

# Serial transport (optional)
serialport = { version = "4", optional = true }

# Ledger HID transport (optional)
hidapi = { version = "2", optional = true }

# QR transport (optional)
qrcode = { version = "0.14", optional = true }
image = { version = "0.25", optional = true }
rqrr = { version = "0.8", optional = true }
ur = { version = "0.4", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
blake2b_simd = "1"

# ============================================================================
# [patch.crates-io] — vendored librustzcash submodule
# ============================================================================
# The four `path = "librustzcash/..."` entries below redirect crates.io
# resolution to the in-tree submodule at `librustzcash/`. The submodule is
# git-pinned via `.gitmodules` to a specific upstream commit; the SHA is
# recorded in the parent repo's tree and verified at clone time only when
# someone runs `git submodule update --init`.
#
# Pinned commit (audit H4 — keep this in sync with the actual submodule HEAD):
#   librustzcash @ bd1bc3fbe6b9168c9654db2b3a7fdc5e7b1c15f8 (NU6.3 / Ironwood)
#
# To verify the submodule is at the documented commit before a release:
#   git -C librustzcash rev-parse HEAD
#   # must match the SHA above
#
# When upgrading librustzcash:
#   1. update the submodule: `cd librustzcash && git fetch && git checkout <new-sha>`
#   2. update the SHA comment above
#   3. run `cargo update -p pczt -p zcash_primitives -p zcash_protocol -p zcash_address`
#   4. re-run the integration tests + the security-audit reports
#
# Long-term we want to drop this patch table entirely once `pczt` ships a
# stable release on crates.io with the hardware-wallet-signer API surface.
# Audit: docs/security-audit/04-host-sdk-rust.md H4.
[patch.crates-io]
pczt = { path = "librustzcash/pczt" }
zcash_primitives = { path = "librustzcash/zcash_primitives" }
zcash_protocol = { path = "librustzcash/components/zcash_protocol" }
zcash_address = { path = "librustzcash/components/zcash_address" }
